fixed screen sizing

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   </head>
   <body>
     <form id="copy-form" action="">
-      <p id="copy-text">Copy link then send to someone to play them</p>
+      <p id="copy-text">Copy link below (or the url up top) then send to another person to play them!</p>
       <input type="text" value="placeholder until link is generated" id="copy-input" readonly>
-      <button id="copy-button">Copy</button>
+      <button id="copy-button">Copy (button doesn't work just copy manually)</button>
     </form>
     <!-- <form id="join-form" action="">
       <p>Join room:</p>
